- translations from web

--- a/src/Modules/Contrib.Reviews/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Contrib.Reviews/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -214,7 +214,7 @@ msgstr "caratteri rimanenti:"
 
 msgctxt "~/Modules/Contrib.Reviews/Views/Parts_Reviews.cshtml"
 msgid "No reviews yet. "
-msgstr "Nessun commento. "
+msgstr "Nessun commento."
 
 msgctxt "~/Modules/Contrib.Reviews/Views/Parts_Reviews.cshtml"
 msgid "There are no reviews for this item."
