--- a/src/Modules/Laser.Orchard.ContactForm/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.ContactForm/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -41,6 +41,10 @@ msgid "Enable File Upload"
 msgstr "Abilita Caricamento File"
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "I have read and agree to the "
+msgstr "Ho letto e accetto"
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "If checked, an upload button will be added to the form."
 msgstr "Se selezionato, un bottone di caricamento verrà aggiunto al form."
 
@@ -61,8 +65,20 @@ msgid "If this option is not checked, instead of attaching the file to the email
 msgstr "Se questa opzione non è selezionata, invece di allegare i file alla email il loro URL verrà aggiunto al testo del messaggio."
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Insert a thank you page"
+msgstr "inserire una pagina di ringraziamento"
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "Mail Template"
 msgstr "Template dell'Email"
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Policy Url."
+msgstr "Url delle policy."
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Privacy Policy"
+msgstr "Politica di Privacy"
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "Recipient Email Address"
@@ -79,6 +95,18 @@ msgstr "Rendi Obbligatorio il Campo 'Nome'"
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "Specify one or more destination addresses separated by a semicolon."
 msgstr "Specificare uno o più indirizzi di destinazione separati da punto e virgola."
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Specify text before accept policy."
+msgstr "Specificare il testo antecedente l'accettazione delle politiche di privacy."
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Text with link."
+msgstr "Testo con link."
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "Thank you page Url."
+msgstr "Url della pagina di ringraziamento."
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "The email address of the sender"
@@ -113,6 +141,10 @@ msgid "Use Same Subject for All Emails"
 msgstr "Usa lo Stesso Oggetto per Tutte le Email"
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
+msgid "User will have to accept policies before submit a message."
+msgstr "L'utente dovrà accettare le politiche di privacy prima di inoltrare il messaggio."
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml"
 msgid "Variables passed to the template through the model:"
 msgstr "Variabili passate al template attraverso il modello:"
 
@@ -123,10 +155,6 @@ msgstr "Aggiungi"
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/FileUpload/Add.cshtml"
 msgid "Browse"
 msgstr "Sfoglia"
-
-msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/FileUpload/Add.cshtml"
-msgid "The file \"{0}\" has been uploaded!"
-msgstr "Il file \"{0}\" è stato inviato!"
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/FileUpload/Add.cshtml"
 msgid "Upload"
@@ -167,6 +195,10 @@ msgstr "Messaggio"
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml"
 msgid "Name"
 msgstr "Nome"
+
+msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml"
+msgid "Privacy Policy must be accepted."
+msgstr "Le politiche di privacy devono essere accettate."
 
 msgctxt "~/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml"
 msgid "Send"
