--- a/src/Modules/Laser.Orchard.OpenAuthentication/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.OpenAuthentication/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -153,20 +153,12 @@ msgid "Identifier"
 msgstr "Identificativo"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
-msgid "In order to enable \"Auto merge\", Users registration settings have to be in one of these status:"
-msgstr "Per potere abilitare la funzionalità di merge automatico degli utenti, le impostazioni per la registrazione utenti devono essere in uno di questi stati:"
-
-msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
 msgid "Key"
 msgstr "Chiave"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
 msgid "Name"
 msgstr "Nome"
-
-msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
-msgid "Note: Remember to enable \"Users can create new accounts on the site\" in Settings > Users"
-msgstr "Nota: Ricordarsi di abilitare \"Gli utenti possono creare nuovi account sul sito\" in Impostazioni > Utenti"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
 msgid "Open Authentication Settings"
@@ -187,10 +179,6 @@ msgstr "Salva"
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
 msgid "Secret"
 msgstr "Secret"
-
-msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
-msgid "There are no providers registered. Why not <a href=\"{0}\">register one</a>?"
-msgstr "Non sono presenti provider registrati. Perché non <a href=\"{0}\">registrarne uno</a>?"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Index.cshtml"
 msgid "User"
