--- a/src/Modules/Laser.Orchard.Maps/App_Data/Localization/fr-FR/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Maps/App_Data/Localization/fr-FR/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - fr-FR
-# Copyright (c) 2015 Laser s.r.l.
+﻿# Orchard resource strings - fr-FR
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
