--- a/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -235,10 +235,6 @@ msgstr "Impostazioni salvate correttamente."
 msgctxt "Laser.Orchard.PaymentGateway.Controllers.PaymentGatewayAPIController"
 msgid "A valid currency is required. You may find a list of valid currencies in this response's data object."
 msgstr "È richiesta una valuta valida. L'oggetto Data di questa risposta contiene una lista di valute valide."
-
-msgctxt "Laser.Orchard.PaymentGateway.Controllers.PaymentGatewayAPIController"
-msgid "Could not find a POS called \"{0}\": you may find a list of available POS names in this response's data object."
-msgstr "Impossibile trovare il metodo di pagamento \"{0}\": l'oggetto Data di questa risposta contiene una lista di metodi validi."
 
 msgctxt "Laser.Orchard.PaymentGateway.Controllers.PaymentGatewayAPIController"
 msgid "The Data object contains the array of valid filter parameters. These are case-insensitive."
