--- a/src/Modules/Laser.Orchard.Queries/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Queries/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -260,7 +260,35 @@ msgctxt "Laser.Orchard.Queries.FilterController"
 msgid "Not authorized to manage queries"
 msgstr "Non autorizzato a gestire le Ricerche"
 
+msgctxt "Laser.Orchard.Queries.Forms.ParametrizedHQLForm"
+msgid "Enter the HQL query. You may use parameters with the following syntax: ( :paramN ). N is the line number (0-based) for the parameter configuration above. The parentheses and whitespace around :paramN are mandatory. The query should return the Ids of the selected ContentItems."
+msgstr "Inserire la query HQL. È possibile utilizzare la seguetne sintassi: ( :paramN ). N è il numero di riga (0-based) del parametro configurato sopra. Le parentesi e gli spazi intorno a :paramN sono obbligatori. La query deve restituire un elenco di Id di contenuti."
+
+msgctxt "Laser.Orchard.Queries.Forms.ParametrizedHQLForm"
+msgid "Enter the values for the parameters. You may use tokens. Enter one value per line, and end each line with a comma: they will each map to a different parameter. This does not support multiline string parameters. All parameters are parsed as strings."
+msgstr "Inserire i valori dei parametri. È possibile utilizzare token. Inserire un valore per riga, e terminare ogni riga con un una virgola: ogni riga verrà considerata un parametro a sé. La configurazione non supporta parametri multi riga. Tutti i parametri saranno considerati e analizzati come stringhe."
+
+msgctxt "Laser.Orchard.Queries.Forms.ParametrizedHQLForm"
+msgid "HQL Query"
+msgstr "Query HQL"
+
+msgctxt "Laser.Orchard.Queries.Forms.ParametrizedHQLForm"
+msgid "Parameters"
+msgstr "Parametri"
+
 msgctxt "Laser.Orchard.Queries.Navigation.AdminMenu"
 msgid "Custom Query"
 msgstr "Query utente"
+
+msgctxt "Laser.Orchard.Queries.Providers.HQLQueryFilterProvider"
+msgid "Allows using a parametrized HQL query to select content items."
+msgstr "Consente l'utilizzo di una query HQL parametrica per estrarre elementi di contenuto."
+
+msgctxt "Laser.Orchard.Queries.Providers.HQLQueryFilterProvider"
+msgid "Filter ContentItems using a parametrized query."
+msgstr "Filtrare i contenuti in base ad una query parametrica."
+
+msgctxt "Laser.Orchard.Queries.Providers.HQLQueryFilterProvider"
+msgid "HQL Query"
+msgstr "Query HQL"
 
