--- a/src/Modules/Laser.Orchard.ShortLinks/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.ShortLinks/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
-# Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+﻿# Orchard resource strings - it-IT
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -49,14 +49,6 @@ msgid "Dynamic link domain"
 msgstr "Dominio del link dinamico (Dynamic link)"
 
 msgctxt "~/Modules/Laser.Orchard.ShortLinks/Views/EditorTemplates/Parts/ShortLinksSettings.cshtml"
-msgid "Set <a target=\"_blank\" href=\"{0}\">the domain and the apikey</a> of your application."
-msgstr "Imposta <a target=\"_blank\" href=\"{0}\">il dominio e l'apikey</a> per l'applicazione."
-
-msgctxt "~/Modules/Laser.Orchard.ShortLinks/Views/EditorTemplates/Parts/ShortLinksSettings.cshtml"
-msgid "Set the <a target=\"_blank\" href=\"{0}\">apikey</a> , on the google site select the project from upside menu's dropdownlist and create a Server Keys, remember to enable the service by going to Overview -> Other popular APIs ->URL Shortener Api"
-msgstr "Controlla la <a target=\"_blank\" href=\"{0}\">apikey</a>: sul sito google di riferimento seleziona il progetto dalla lista del menu in alto e crea una Chiave Server ("Server Keys"). Ricordati di abilitare anche l'opportuno servizio andando su Overview -> Other popular APIs ->URL Shortener Api"
-
-msgctxt "~/Modules/Laser.Orchard.ShortLinks/Views/EditorTemplates/Parts/ShortLinksSettings.cshtml"
 msgid "Short Link Settings"
 msgstr "Impostazioni modulo Short Link"
 
@@ -75,10 +67,6 @@ msgstr "Link breve"
 msgctxt "Laser.Orchard.ShortLinks.Handlers.ShortLinksHandler"
 msgid "The short link is not associated to this page!"
 msgstr "Questo link breve (short link) non è attualmente associato alla presente pagina!"
-
-msgctxt "Laser.Orchard.ShortLinks.Services.MissingSettingsBanner"
-msgid "The <a href=\"{0}#shortlinksetting\">ShortLinks settings</a> need to be configured."
-msgstr "Le impostazioni del <a href=\"{0}#shortlinksetting\">modulo ShortLink</a> devono ancora essere configurate."
 
 msgctxt "Laser.Orchard.ShortLinks.Services.ShortLinksService"
 msgid "No Shorturl Setting Found"
