--- a/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
@@ -1,4 +1,4 @@
-# Orchard resource strings - it-IT
+﻿# Orchard resource strings - it-IT
 # Copyright (c) 2019 Laser s.r.l.
 
 
@@ -345,10 +345,6 @@ msgid "Add attachment"
 msgstr "Aggiungi allegato"
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
-msgid "By clicking \"SEND\" I declare that I have read and understood "
-msgstr "Cliccando su "Invia" dichiaro di avere letto e compreso"
-
-msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Comments or Inquiry"
 msgstr "Commenti o richieste"
 
@@ -407,10 +403,6 @@ msgstr "Carica file"
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Your Name"
 msgstr "Il tuo Nome"
-
-msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml"
-msgid "By clicking \"SEND\" I declare that I have read and understood "
-msgstr "Cliccando su \"Invia\" dichiaro di avere letto e compreso"
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml"
 msgid "Comments or Inquiry"
