Aggiunta logica per nascondere e mostrare sezione con tipologie di cookie da autorizzare.

--- a/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
@@ -152,3 +152,6 @@ msgctxt "Laser.Orchard.Cookies.Services.GDPRScript"
 msgid "Technical"
 msgstr "Tecnici"
 
+msgctxt "~/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml"
+msgid "Change your choice"
+msgstr "Cambia la tua scelta"
